<resources>
    <string name="app_name">Stock Boiiii!</string>
    <string name="delete_product">Delete Product</string>
    <string name="order_from_supplier">Order From Supplier</string>
    <string name="add_quantity">Add Quantity</string>
    <string name="add">+</string>
    <string name="subtract_quantity">Subtract Quantity</string>
    <string name="Subtract">-</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price: $</string>
    <string name="sale">Sale</string>
    <string name="currently_no_stock_nadd_a_an_item_by_clicking_the_plus_button">Currently No Stock Add a an item by clicking the plus button.</string>
    <string name="name">Name</string>
    <string name="edit_quantity">Quantity</string>
    <string name="edit_price">Price</string>
    <string name="edit_summary">Summary</string>
    <string name="add_image">Add Image</string>
    <string name="cannot_make_sale">None in stock, cannot make sale</string>
    <string name="quantity_error">Error updating quantity</string>
    <string name="quantity_updated">Quantity updated</string>
    <string name="dollar_sign">$</string>
    <string name="in_stock">in stock</string>
    <string name="required_fields">Cannot save without required fields</string>
    <string name="failed_save">Save Failed</string>
    <string name="successful_save">Product Saved</string>
    <string name="discard_changes_prompt">Discard Changes and Lose Product?</string>
    <string name="discard_confirm">Discard</string>
    <string name="continue_edit">Keep Editing</string>
</resources>
